# inimalFEM-VTK

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENCE  README.md  makefile  minimalFEM.out
output/: test1.vtk  test1_org.vtk  test2.vtk  test3.vtk  test4.vtk  unko.vtk  unkokkokko.vtk
src/: element_constraint.cpp  element_constraint.hpp  main.cpp
